--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>Board.qml</file>
         <file>Cell.qml</file>
         <file>Button.qml</file>
+        <file>Counter.qml</file>
     </qresource>
 </RCC>
