Attempt to add a choice of board size

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,7 @@
         <file>Cell.qml</file>
         <file>CustomButton.qml</file>
         <file>InfoField.qml</file>
+        <file>VictoryDialog.qml</file>
+        <file>CreateBoardDialog.qml</file>
     </qresource>
 </RCC>
