Menu fixed. It works with qml model now

--- a/qml.qrc
+++ b/qml.qrc
@@ -8,5 +8,6 @@
         <file>InfoField.qml</file>
         <file>VictoryDialog.qml</file>
         <file>CreateBoardDialog.qml</file>
+        <file>MenuModel.qml</file>
     </qresource>
 </RCC>
