Highlighting of available steps is completed Fixed a crash error when double-clicking on the last available cell when winning

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,13 +1,13 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Controller.js</file>
         <file>Board.qml</file>
         <file>Cell.qml</file>
         <file>CustomButton.qml</file>
         <file>InfoField.qml</file>
-        <file>VictoryDialog.qml</file>
+        <file>InfoDialog.qml</file>
         <file>CreateBoardDialog.qml</file>
         <file>MenuModel.qml</file>
+        <file>icon.jpg</file>
     </qresource>
 </RCC>
